--- a/wp-content/themes/upcreative/css/style.css
+++ b/wp-content/themes/upcreative/css/style.css
@@ -927,7 +927,15 @@ margin:15px 0;
 }
 .desk{
 font-family:proxima nova thin;
-color:black;
+font-size:23px;
+line-height: 1.3;
+font-weight: 400;
+margin-top:35px;
+}
+
+.bg-custom{
+	background-color:white;
+padding: 30px 20px 30px 25px;
 }
 
 .about-history-logo {
@@ -935,7 +943,7 @@ color:black;
     padding: 30px 0;
 }
 .about-history-copy {
-    padding: 25px ! important;
+    padding: 10px 10px 10px 10px ! important;
     background-color: #fff;
 	
 }
