--- a/wp-content/themes/upcreative/css/main.css
+++ b/wp-content/themes/upcreative/css/main.css
@@ -198,12 +198,7 @@ padding: overflow-x:hidden;
         right: 0;
         bottom: 40px
     }
-    .hero-list {
-        list-style: none;
-        height: auto;
-        padding: -50px;
-        margin: -40px;
-    }
+  
     .hero-list li {
         float: left;
         position: relative;
@@ -299,7 +294,7 @@ bottom: 40px;
 list-style: none;
 height: auto;
 padding: 0;
-margin: 0;
+margin: 20px;
 }
 .hero-list li {
 float: left;
@@ -359,7 +354,7 @@ top: 31px;
 transition: all .5s;
 }
 .menu-bar-home {
-top: 79px;
+    top: 65px;
 }
 .menu-bar-scroll {
 //top: 1px;
@@ -851,6 +846,8 @@ color: #797979;
  
  
  /* home responsive-start */
+
+ 
 @media screen and (min-width:319px) and (max-width:350px){
 	.space {
     height:115px !important;
@@ -979,34 +976,6 @@ font-size: 14px;
 }
 }
 
-/* @media screen and (min-width:620px) and (max-width:645px) { */
-	/* .space{ */
-		/* height: 85px ! important; */
-	/* } */
-/* } */
-
-
-/* @media screen and (min-width:790px) and (max-width:801px) { */
-	/* .space{ */
-		/* height: 550px ! important; */
-	/* } */
-/* } */
-
-
-
-/* @media screen and (min-width:1000px) and (max-width:1030px) { */
-	/* .space{ */
-		/* height: 238px !important; */
-	/* } */
-/* } */
-
-
-/* @media screen and (min-width:750px) and (max-width:769px) { */
-	/* .space{ */
-		/* height: 415px ! important; */
-	/* } */
-/* } */
-
 @media screen and (max-width:710px) {
 
 #menumask, .pop-exp-best {
@@ -1072,6 +1041,7 @@ padding-top: 20px;
 .hero-list li {
 padding-right: 10px;
 margin-right: 10px;
+margin:25px;
 }
 .pop-exp, .pop-exp-best {
 padding: 10px 15px;
@@ -1260,5 +1230,18 @@ text-transform: uppercase !important;
 letter-spacing: 1px !important;
 text-align: center !important;
 margin-left: 63% !important;
+}
+}
+
+@media screen and (max-width:768px){
+	#logo-home {
+    float: left;
+    width: 80px;
+    height: 88px;
+    margin-top: 20px;
+    margin-right: 15px;
+    background-image: url(../img/logowhite.png);
+    background-size: contain;
+    cursor: pointer;
 }
 }
