--- a/wp-content/themes/upcreative/css/mediaqueries.css
+++ b/wp-content/themes/upcreative/css/mediaqueries.css
@@ -1838,6 +1838,21 @@ background-image: url(../img/fldroit.png)
 }
 }
 
+@media screen and (max-width:768px){
+	#logo-home {
+    float: left;
+    width: 80px ! important;
+    height: 88px;
+    margin-top: 20px;
+    margin-right: 15px;
+    background-image: url(../img/logowhite.png);
+    background-size: contain;
+    cursor: pointer;
+}
+.dividerupc {
+    height: 0px !important;
+}
+}
 
 
 
