--- a/wp-content/themes/upcreative/css/popup.css
+++ b/wp-content/themes/upcreative/css/popup.css
@@ -1,3 +1,22 @@
+@media screen and (max-width:768px){
+	#logo-home {
+    float: left;
+    width: 80px ! important;
+    height: 88px;
+    margin-top: 20px;
+    margin-right: 15px;
+    background-image: url(../img/logowhite.png);
+    background-size: contain;
+    cursor: pointer;
+}
+.dividerupc {
+    height: 0px;
+}
+}
+
+
+
+
 .center {
 margin-top:50px;   
 }
