ajout s pour tout le mot upcreatives

--- a/wp-content/themes/upcreative/css/header.css
+++ b/wp-content/themes/upcreative/css/header.css
@@ -642,7 +642,7 @@ a {
     width: 176px;
     height: 15px;
     margin-top: 18px;
-    background-image: url(../images/logo-mv.png);
+    background-image: url(../images/logonoir.png);
 }
 
 .topbar-scroll {
