--- a/wp-content/themes/upcreative/css/style.css
+++ b/wp-content/themes/upcreative/css/style.css
@@ -267,10 +267,12 @@ body {
 }
 
 h3 {
+    position: relative;
     font-size: 35px !important;
     border: 5px solid #000;
     padding: 40px;
     font-weight: bold;
+    margin: auto;
 }
 
 #logo-black {
@@ -279,7 +281,7 @@ h3 {
 
 .work-border {
     max-width: 180px;
-    margin-left: 40%;
+    margin-left: 8%;
 }
 
 .button-top {
@@ -287,10 +289,38 @@ h3 {
     padding: 10px 20px;
 }
 
-@media screen and (max-width:634px) {
+@media screen and (max-width:320px) {
     .work-border {
         max-width: 180px;
-        margin-left: 30%;
+        margin-left: 8%;
+    }
+}
+
+@media screen and (min-width: 321px) and (max-width:375px) {
+    .work-border {
+        max-width: 180px;
+        margin-left: 10%;
+    }
+}
+
+@media screen and (min-width: 376px) and (max-width:425px) {
+    .work-border {
+        max-width: 180px;
+        margin-left: 14%;
+    }
+}
+
+@media screen and (min-width: 426px) and (max-width:768px) {
+    .work-border {
+        max-width: 180px;
+        margin-left: 33%;
+    }
+}
+
+@media screen and (min-width: 769px) and (max-width:1024px) {
+    .work-border {
+        max-width: 180px;
+        margin-left: 33%;
     }
 }
 
@@ -739,7 +769,7 @@ h3 {
 }
 
 .activate-hide {
-    opacity: 0!important
+    opacity: 0 !important
 }
 
 .relative {
@@ -755,7 +785,7 @@ h3 {
 }
 
 .cdefault {
-    cursor: default!important
+    cursor: default !important
 }
 
 .block {
@@ -847,19 +877,27 @@ h3 {
 }
 
 .intro {
-    font-size: 24px !important;
+    font-size: 20px !important;
     font-family: Mrs Eaves OT;
     line-height: 29px;
+    margin-left: 2%;
+}
+
+@media screen and (min-width: 426px) and (max-width: 768px) {
+    .intro {
+        margin: 5px;
+        font-size: 12px;
+    }
 }
 
 .button-multilangue:hover {
-    text-decoration: none!important;
+    text-decoration: none !important;
 }
 
 .button-default:hover {
     background-color: #000 !important;
     color: #fff !important;
-    text-decoration: none!important;
+    text-decoration: none !important;
 }
 
 .button-w {
@@ -1003,8 +1041,7 @@ h3 {
 }
 .menu-bar {
     position: fixed;
-    top: 31px;
-    //left: 0;
+    top: 31px; //left: 0;
     transition: all .5s;
 }
 .menu-bar-scroll {
@@ -1023,8 +1060,7 @@ h3 {
     padding: 70px 15px;
 }
 .menu-search {
-    display: none;
-    //display: table-cell;
+    display: none; //display: table-cell;
     height: auto;
     padding: 0;
     margin: 0;
@@ -1091,8 +1127,7 @@ h3 {
     width: 100%;
     height: 100px;
     padding-top: 25px;
-    transition: all .3s;
-    //background-color: #fff;
+    transition: all .3s; //background-color: #fff;
     cursor: default;
 }
 .dividerupc {
@@ -1139,11 +1174,11 @@ h3 {
     background-color: #fff;
 }
 .topbar-w #navicon span {
-    background-color: #fff!important;
+    background-color: #fff !important;
 }
 .topbar-scroll {
-    height: 66px!important;
-    padding: 8px 0!important;
+    height: 66px !important;
+    padding: 8px 0 !important;
 }
 .topbar-scroll #logoupcreative {
     width: 82px;
@@ -1249,7 +1284,7 @@ h3 {
     height: 100%;
 }
 .activate-hide {
-    opacity: 0!important;
+    opacity: 0 !important;
 }
 #navicon {
     //display: none;
@@ -1402,7 +1437,7 @@ h1 {
 .bg-nc {
     <<<<<<< HEAD=======background-image: url(../img/upc5.jpg);
     background-size: cover !important;
-    background-repeat: no-repeat!important;
+    background-repeat: no-repeat !important;
 }
 .bg-cs {
     background-image: url(../img/upc2.jpg);
@@ -1437,23 +1472,23 @@ h1 {
 
 }
 .social-style {
-    display:table-cell;
-    height:auto;
+    display: table-cell;
+    height: auto;
 }
 .social-style li {
-    display:block;
-    border:none;
-    margin:0;
-    text-transform:uppercase;
+    display: block;
+    border: none;
+    margin: 0;
+    text-transform: uppercase;
 }
 .social-style li a {
-    color:#fff;
-    text-decoration:none;
+    color: #fff;
+    text-decoration: none;
 }
 .social-style li li {
-    display:inline-block;
-    border:none;
-    border-left:1px solid #868686;
+    display: inline-block;
+    border: none;
+    border-left: 1px solid #868686;
 }
 @keyframes swing {
     20% {
@@ -1481,17 +1516,17 @@ h1 {
 .next,
 .prev {
     color: #000;
-    font-size:20px !important;
+    font-size: 20px !important;
     text-transform: capitalize;
 }
 .next {
-    float:right;
+    float: right;
 }
 .prev {
-    float:left;
+    float: left;
 }
 .next-prev {
-    margin:50px 0;
+    margin: 50px 0;
 }
 .fa-angle-left,
 .fa-angle-right {
@@ -1520,14 +1555,14 @@ h1 {
 }
 .title {
     z-index: 9;
-    left:45%;
-    top:120px;
-    position:absolute;
+    left: 45%;
+    top: 120px;
+    position: absolute;
 }
 .title h1 {
-    color:#FFF;
+    color: #FFF;
     font-size: 60px;
-    font-family:Mrs Eaves OT;
+    font-family: Mrs Eaves OT;
 }
 .wrapper,
 .wrapper-l,
@@ -1538,7 +1573,7 @@ h1 {
     margin: auto;
 }
 .work-banner {
-    background:#2E2F38;
+    background: #2E2F38;
 }
 .button-black {
     margin-top: 15px;
@@ -1549,30 +1584,30 @@ h1 {
     font-size: 16px;
 }
 .description {
-    margin-top:40px;
+    margin-top: 40px;
     line-height: 24px;
-    font-size:14px;
-    margin-bottom:30px;
-    padding-bottom:40px;
-    border-bottom:solid 1px #e3e3e3;
+    font-size: 14px;
+    margin-bottom: 30px;
+    padding-bottom: 40px;
+    border-bottom: solid 1px #e3e3e3;
 }
 .button {
-    font-size:18px;
-    padding:15px 30px;
-    border:2px solid #000;
-    color:#000;
-    background:#fff;
+    font-size: 18px;
+    padding: 15px 30px;
+    border: 2px solid #000;
+    color: #000;
+    background: #fff;
 }
 .resume {
-    margin-bottom:30px;
+    margin-bottom: 30px;
 }
 .resume ul {
-    margin:0;
-    padding:0;
+    margin: 0;
+    padding: 0;
     list-style: none;
 }
 .resume ul li {
-    margin:15px 0;
+    margin: 15px 0;
 }
 html,
 body {
@@ -1600,20 +1635,6 @@ h3 {
 }
 #logo-black {
     background: url(../img/logo-up-creative.png);
-}
-.work-border {
-    max-width: 180px;
-    margin-left: 40%;
-}
-.button-top {
-    margin: 5px 15px 0 0;
-    padding: 10px 20px;
-}
-@media screen and (max-width:634px) {
-    .work-border {
-        max-width: 180px;
-        margin-left: 30%;
-    }
 }
 
 /* ---- button ---- */
@@ -1668,8 +1689,8 @@ h3 {
     padding: 0;
 }
 .projects .name {
-    position:absolute;
-    z-index:4;
+    position: absolute;
+    z-index: 4;
     text-transform: none;
     letter-spacing: 0;
     font-weight: normal;
@@ -1753,8 +1774,8 @@ h3 {
     background-color: #e9e8e5;
 }
 .navbar-toggle {
-    float:inherit !important;
-    margin-top:35px;
+    float: inherit !important;
+    margin-top: 35px;
 }
 .navbar-nav {
     background: #fff;
@@ -1778,18 +1799,18 @@ h3 {
     margin: auto;
 }
 .menu-list li a {
-    color:#fff !important;
-    text-decoration:none;
+    color: #fff !important;
+    text-decoration: none;
 }
 .projects h4 a {
-    color:#fff !important;
+    color: #fff !important;
 }
 .grid {
-    min-height:500px;
+    min-height: 500px;
     text-align: left;
 }
 .grid h4 {
-    margin-left:70px;
+    margin-left: 70px;
 }
 @media screen and (max-width:990px) {
     .grid {
@@ -1800,5 +1821,6 @@ h3 {
     }
 }
 .div.wpcf7-mail-sent-ok {
-    display:none ! important;
+    display: none ! important;
 }
+s
