--- a/wp-content/themes/upcreative/css/popup.css
+++ b/wp-content/themes/upcreative/css/popup.css
@@ -348,5 +348,17 @@ input[type=text] .placehold {
     }
 }
 
+@media screen and (min-width:320px) and (max-width:600px) {
+    .enquire_margin {
+        margin-left: -15px;
+    }
+}
+
+@media screen and (min-width:601px) {
+    .enquire_margin {
+        margin-left: 0px;
+    }
+}
+
 
 /* responsive end */
